--- a/scalar/AUTHORS
+++ b/scalar/AUTHORS
@@ -1,3 +1,12 @@
-Endre László, laszlo.endre@itk.ppke.hu
-Mike Giles, mike.giles@maths.ox.ac.uk
-Jeremy Appleyard, jappleyard@nvidia.com
+Endre László
+Univeristy of Oxford, Oxford, UK
+Pázmány Péter Catholic University, Budapest, HU
+laszlo.endre@itk.ppke.hu
+
+Mike Giles
+Univeristy of Oxford, Oxford, UK
+mike.giles@maths.ox.ac.uk
+
+Jeremy Appleyard
+NVIDIA Corporation Ltd, San Jose, CA, USA
+jappleyard@nvidia.com
